Fixing an overlapping issue for click regions.

--- a/app/assets/stylesheets/modules-tables.css.scss
+++ b/app/assets/stylesheets/modules-tables.css.scss
@@ -19,7 +19,7 @@
 
 .scroll-wrapper {
   position: relative;
-  clear: left;
+  clear: both;
   overflow: visible;
 }
 .table-wrapper {
